[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/you_win.gd" id="1_script"]

[node name="YouWin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.15, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
text = "YOU WIN!"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "The tribe is safe!
All devils unmasked!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Final Score: 0"
horizontal_alignment = 1

[node name="LevelsLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Levels Completed: 10"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 30

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PLAY AGAIN"

[node name="MenuButton" type="Button" parent="CenterContainer/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MENU"
